# embark

./: README.md  pyproject.toml
data/: payroll_records.json  recurring_costs.json  tax_obligations.json
docs/: HIGH_LEVEL_ARCHITECTURE.md  SOW.md  TRS.md
outputs/: escalation_log.json  escalation_report.html
src/agent/: advisor_agent.py  prompts.py
src/engines/: classifier_engine.py  watcher_engine.py
src/models/: constants.py  schemas.py
src/pipeline/: loader.py  report_generator.py  run_pipeline.py
src/pipeline/templates/: report.html.j2
