[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "financial-escalation-system"
version = "1.0.0"
description = "AI-powered financial escalation detection for Indian startups"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.7.0",
    "google-generativeai>=0.8.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
